# Tipousi

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/activation/: relu.hpp  sigmoid.hpp  softmax.hpp  template.hpp
include/base/: op.hpp
include/data/: dataset.hpp
include/graph/: node.hpp  sequential.hpp  trainable.hpp
include/layer/: dense.hpp
include/loss/: base.hpp  mse.hpp  template.hpp
include/model/: node.hpp  sequential.hpp
include/optimizer/: adam.hpp  base.hpp  sgd.hpp
src/activation/: relu.cpp  sigmoid.cpp  softmax.cpp
src/data/: dataset.cpp
src/graph/: node.cpp  sequential.cpp
src/layer/: dense.cpp
src/loss/: mse.cpp
src/model/: node.cpp  sequential.cpp
src/optimizer/: adam.cpp  sgd.cpp
tests/: main.cpp  test_adder_inference.cpp  test_adder_inference_with_adam.cpp  test_dense.cpp  test_layers.cpp  test_relu.cpp  test_sigmoid.cpp  test_simple_net.cpp  test_softmax.cpp  test_xor_inference big_net.cpp  test_xor_inference.cpp  utils.cpp  utils.hpp
